# Lizard-Runner

./: Dockerfile  LICENSE  README.md  action.yml  entorypoint.sh  entrypoint.py  entrypoint.sh  inputs.csv  lizard_argument_validator.py  pyproject.toml  requirement.txt  white text.txt
.github/: delete-merged-branch-config.yml
.github/ISSUE_TEMPLATE/: --feature-request.md  bug_report.md
.github/workflows/: bandit.yml  codeql-analysis.yml  delete-workflows.yml  lizard.yml  pyt.yml  release.yml  test.yml
src/: temp.py
