[tool.poetry]
name = "lizard-runner"
version = "0.1.0"
description = ""
authors = ["U-Not <euno.eng@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "lizard_runner"}]

[tool.poetry.dependencies]
python = "3.9.13"
lizard = "^1.17.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
